--- a/docker/gitlab/Dockerfile
+++ b/docker/gitlab/Dockerfile
@@ -35,6 +35,7 @@ COPY patches patches
 RUN git am < patches/0001-Disable-AssetProxyFilter-initializer.patch
 RUN git am < patches/0002-Disable-automatic-schema-dumping-after-migration.patch
 
+COPY list-migrations.rb list-migrations.rb
 COPY prepare.sh prepare.sh
 
 USER root
