Adds shellcheck to gitlab-ci for merge requests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,3 +15,11 @@ lint:
     - cd notifier
     - bundle install
     - bundle exec rubocop
+
+shellcheck:
+  stage: test
+  image: koalaman/shellcheck-alpine:stable
+  before_script:
+    - shellcheck --version
+  script:
+    - shellcheck docker/**/*.sh
