--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,16 +62,16 @@ db:migrations:
       alias: redis
   artifacts:
     paths:
-      - migration-stats.json
-      - migrations.json
+      - migration-testing/
     expire_in: 4 weeks
     when: always
   allow_failure: true
   script:
     - cd ${GITLAB_PATH}
     - ./prepare.sh
-    - bundle exec ruby list-migrations.rb > ${CI_PROJECT_DIR}/migrations.json
-    - bundle exec rake gitlab:db:migration_testing[${CI_PROJECT_DIR}/migration-stats.json]
+    - bundle exec rake gitlab:db:migration_testing
+    - mv tmp/migration-testing/ ${CI_PROJECT_DIR}
+    - bundle exec ruby list-migrations.rb > ${CI_PROJECT_DIR}/migration-testing/migrations.json
 
 notify-upstream:
   stage: final
@@ -83,11 +83,10 @@ notify-upstream:
   # Also store artifacts here so we can easily generate direct links to them
   artifacts:
     paths:
-      - migration-stats.json
-      - migrations.json
+      - migration-testing/
     expire_in: 4 weeks
     when: always
   script:
     - cd notifier
     - bundle install
-    - bundle exec ruby notifier.rb send ../migration-stats.json ../migrations.json
+    - bundle exec ruby notifier.rb send ../migration-testing/migration-stats.json ../migration-testing/migrations.json
