Add variables for API port

--- a/db-testing.yml
+++ b/db-testing.yml
@@ -53,6 +53,7 @@ db:migrations:
     DBLAB_TOKEN: $DBLAB_TOKEN
     DBLAB_USER: $DBLAB_USER
     DBLAB_PASSWORD: $DBLAB_PASSWORD
+    DBLAB_API_PORT: $DBLAB_API_PORT
     DBLAB_ENVIRONMENT: $DBLAB_ENVIRONMENT
     DBLAB_CLONE_ID: "database-testing-${CI_PIPELINE_ID}"
   services:
