--- a/db-testing.yml
+++ b/db-testing.yml
@@ -91,4 +91,4 @@ notify-upstream:
   script:
     - cd notifier
     - bundle install
-    - bundle exec ruby notifier.rb send ../migration-testing/migration-stats.json ../migration-testing/migrations.json ../migration-testing/clone-details.json
+    - bundle exec ruby notifier.rb send ../migration-testing/migration-stats.json ../migration-testing/migrations.json ../migration-testing/clone-details.json ../migration-testing/
