--- a/notifier/Gemfile
+++ b/notifier/Gemfile
@@ -1,6 +1,7 @@
 # frozen_string_literal: true
 source 'https://rubygems.org'
 
+gem 'activesupport'
 gem 'filesize'
 gem 'gitlab'
 gem 'gitlab-styles', require: false
