--- a/db-testing.yml
+++ b/db-testing.yml
@@ -71,7 +71,7 @@ db:migrations:
     - cd ${GITLAB_PATH}
     - ./prepare.sh
     - mkdir -p tmp/migration-testing
-    - bundle exec rake gitlab:db:migration_testing | tee tmp/migration-testing/full-migration-output.log || true
+    - bundle exec rake gitlab:db:migration_testing:up | tee tmp/migration-testing/up/full-migration-output.log || true
     - mv tmp/migration-testing/ ${CI_PROJECT_DIR}
     - bundle exec ruby list_migrations.rb > ${CI_PROJECT_DIR}/migration-testing/migrations.json
     - bundle exec ruby clone_details.rb postgres > ${CI_PROJECT_DIR}/migration-testing/clone-details.json
@@ -92,4 +92,4 @@ notify-upstream:
   script:
     - cd notifier
     - bundle install
-    - bundle exec ruby notifier.rb send ../migration-testing/migration-stats.json ../migration-testing/migrations.json ../migration-testing/clone-details.json ../migration-testing/
+    - bundle exec ruby notifier.rb send ../migration-testing/up/migration-stats.json ../migration-testing/migrations.json ../migration-testing/clone-details.json ../migration-testing/up/
