parent 132a3157829c1db6c2f27ed3c32714bc77be1dca author dfrazao-gitlab <dfrazao@gitlab.com> 1633621112 +0200 committer dfrazao-gitlab <dfrazao@gitlab.com> 1634201140 +0200
Pass the notifier a single directory and let it infer file contents

- Refactor Notifier to receive just a directory path

--- a/db-testing.yml
+++ b/db-testing.yml
@@ -92,4 +92,4 @@ notify-upstream:
   script:
     - cd notifier
     - bundle install
-    - bundle exec ruby notifier.rb send ../migration-testing/up/migration-stats.json ../migration-testing/migrations.json ../migration-testing/clone-details.json ../migration-testing/up/
+    - bundle exec ruby notifier.rb send ../migration-testing/
