Run migrations decomposed
When the RUN_DECOMPOSED variable is set to true while triggering the
pipeline, run migrations in a decomposed configuration for main and
ci.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,5 +54,13 @@ run pipeline:
   image: python:alpine
   before_script:
     - apk add --update curl jq
+  variables:
+    RUN_DECOMPOSED: 'false'
   script:
     - ./misc/trigger-test-pipeline.sh
+
+run pipeline decomposed:
+  extends:
+    - run pipeline
+  variables:
+    RUN_DECOMPOSED: 'true'
