--- a/db-testing.yml
+++ b/db-testing.yml
@@ -17,6 +17,15 @@ variables:
   tags:
     - builder
 
+.rules:if-decomposed:
+  rules:
+    - if: '$RUN_DECOMPOSED == "true"'
+
+.rules:if-not-decomposed:
+  rules:
+    - if: '$RUN_DECOMPOSED == "true"'
+      when: never
+
 image:gitlab:
   extends: .image:base
   script:
@@ -42,7 +51,7 @@ image:redis:
     - docker tag ${IMAGE_NAME} ${DOCKER_REGISTRY}/${IMAGE_NAME}
     - docker push ${DOCKER_REGISTRY}/${IMAGE_NAME}
 
-db:migrations:
+.db:migrations:base:
   stage: test
   image: ${DOCKER_REGISTRY}/$IMAGE_NAME
   tags:
@@ -56,11 +65,7 @@ db:migrations:
     DBLAB_API_PORT: $DBLAB_API_PORT
     DBLAB_ENVIRONMENT: $DBLAB_ENVIRONMENT
     DBLAB_CLONE_ID: "database-testing-${CI_PIPELINE_ID}"
-  services:
-    - name: ${DOCKER_REGISTRY}/gitlab-com-database-testing-dblab-ssh:latest
-      alias: postgres
-    - name: ${DOCKER_REGISTRY}/redis:4.0-alpine
-      alias: redis
+    CLONE_DETAILS_DB_NAME: "postgres" # temporary to make clone_details work with multiple databases
   artifacts:
     paths:
       - migration-testing/
@@ -74,15 +79,40 @@ db:migrations:
     - bundle exec rake gitlab:db:migration_testing:up | tee tmp/migration-testing/up/full-migration-output.log || true
     - mv tmp/migration-testing/ ${CI_PROJECT_DIR}
     - bundle exec ruby list_migrations.rb > ${CI_PROJECT_DIR}/migration-testing/migrations.json
-    - bundle exec ruby clone_details.rb postgres > ${CI_PROJECT_DIR}/migration-testing/clone-details.json
+    - bundle exec ruby clone_details.rb ${CLONE_DETAILS_DB_NAME} > ${CI_PROJECT_DIR}/migration-testing/clone-details.json
+
+db:migrations:
+  extends:
+    - .db:migrations:base
+    - .rules:if-not-decomposed
+  services:
+    - name: ${DOCKER_REGISTRY}/gitlab-com-database-testing-dblab-ssh:latest
+      alias: postgres
+    - name: ${DOCKER_REGISTRY}/redis:4.0-alpine
+      alias: redis
+
+db:migrations decomposed:
+  extends:
+    - .db:migrations:base
+    - .rules:if-decomposed
+  variables:
+    CLONE_DETAILS_DB_NAME: "postgres-main" # Temporary to make clone_details script work
+  services:
+    - name: ${DOCKER_REGISTRY}/gitlab-com-database-testing-dblab-ssh:latest
+      alias: postgres-main
+      variables:
+        DBLAB_CLONE_ID: "database-testing-${CI_PIPELINE_ID}-main"
+    - name: ${DOCKER_REGISTRY}/gitlab-com-database-testing-dblab-ssh:latest
+      alias: postgres-ci
+      variables:
+        DBLAB_CLONE_ID: "database-testing-${CI_PIPELINE_ID}-ci"
+    - name: ${DOCKER_REGISTRY}/redis:4.0-alpine
+      alias: redis
 
 notify-upstream:
   stage: final
   tags:
     - builder
-  needs:
-    - job: db:migrations
-      artifacts: true
   # Also store artifacts here so we can easily generate direct links to them
   artifacts:
     paths:
