Fix the Gitlab.com? override patch not applying
Before https://gitlab.com/gitlab-org/gitlab/-/merge_requests/80755,
our patch overriding the Gitlab.com? method was the best way to force
migrations to run in a .com? context. After this MR, our patch no longer
applies.

Switch to using the environment variable in that MR, and temporarially
maintain the patch for backwards compatibility.

--- a/db-testing.yml
+++ b/db-testing.yml
@@ -56,6 +56,7 @@ image:redis:
   tags:
     - worker
   variables:
+    GITLAB_SIMULATE_SAAS: "true" # Pretend we are gitlab.com during testing
     DBLAB_HOST_KEYS: $DBLAB_HOST_KEYS
     DBLAB_SSH_KEY: $DBLAB_SSH_KEY
     DBLAB_TOKEN: $DBLAB_TOKEN
