--- a/docker/gitlab/Dockerfile
+++ b/docker/gitlab/Dockerfile
@@ -31,9 +31,7 @@ RUN bundle check
 USER gitlab
 WORKDIR $GITLAB_PATH
 COPY patches patches
-RUN git am < patches/0001-Disable-AssetProxyFilter-initializer.patch
-RUN git am < patches/0002-Disable-automatic-schema-dumping-after-migration.patch
-RUN git am < patches/0003-Pretend-we-are-GitLab.com-for-testing-only.patch
+RUN patches/apply.sh
 
 COPY list_migrations.rb list_migrations.rb
 COPY clone_details.rb clone_details.rb
