--- a/db-testing.yml
+++ b/db-testing.yml
@@ -76,7 +76,9 @@ image:redis:
     - cd ${GITLAB_PATH}
     - ./prepare.sh
     - mkdir -p tmp/migration-testing/up
+    - mkdir -p tmp/migration-testing/background_migrations
     - bundle exec rake gitlab:db:migration_testing:up | tee tmp/migration-testing/up/full-migration-output.log || true
+    - bundle exec rake gitlab:db:migration_testing:sample_background_migrations | tee tmp/migration-testing/background_migrations/full-migration-output.log || true
     - mv tmp/migration-testing/ ${CI_PROJECT_DIR}
     - bundle exec ruby list_migrations.rb > ${CI_PROJECT_DIR}/migration-testing/migrations.json
     - bundle exec ruby clone_details.rb ${CLONE_DETAILS_DB_NAME} > ${CI_PROJECT_DIR}/migration-testing/clone-details.json
