--- a/docker/gitlab/Dockerfile
+++ b/docker/gitlab/Dockerfile
@@ -12,9 +12,10 @@ RUN chown gitlab:gitlab $GITLAB_PATH
 USER gitlab
 WORKDIR $GITLAB_PATH
 
+ARG UPSTREAM_GIT_URL=http://gitlab.com/gitlab-org/gitlab.git
 RUN git config --global user.email "gitlab-org/database-team@gitlab.com"
 RUN git config --global user.name "GitLab Database Team"
-RUN git clone --progress https://gitlab.com/gitlab-org/gitlab.git $GITLAB_PATH
+RUN git clone --progress "$UPSTREAM_GIT_URL" "$GITLAB_PATH"
 RUN bundle config set deployment 'true'
 RUN bundle config set clean 'true'
 RUN bundle config set jobs $(nproc)
