--- a/docker/dblab-ssh/Dockerfile
+++ b/docker/dblab-ssh/Dockerfile
@@ -13,7 +13,7 @@ ENV DBLAB_SSH_KEY=unset
 
 ENV DBLAB_USER=unset
 ENV DBLAB_PASSWORD=unset
-ENV DBLAB_ENVIRONMENT=gitlab-production-tunnel
+ENV DBLAB_ENVIRONMENT=unset
 ENV DBLAB_TOKEN=unset
 ENV DBLAB_CLONE_ID=unset
 ENV DBLAB_API_PORT=unset
