--- a/notifier/Gemfile
+++ b/notifier/Gemfile
@@ -2,6 +2,7 @@
 source 'https://rubygems.org'
 
 gem 'activesupport'
+gem 'actionview'
 gem 'filesize'
 gem 'gitlab'
 gem 'gitlab-styles', require: false
